# chouodm

./: .gitignore  README.md  pyproject.toml
chouodm/: config.py  connection.py  document.py  encode.py  errors.py  hooks.py  manager.py  relation.py  session.py  types.py  typing.py  utils.py  validation.py
chouodm/aggregate/: aggregate.py  expressions.py
chouodm/query/: __init__.py  builder.py  extra.py  query.py  result.py
chouodm/sync/: query.py
tests/: conftest.py  test_connection.py  test_create_document.py  test_create_dynamic_document.py  test_extra.py  test_force_sync.py  test_relation.py  test_sync.py
tests/queries/: test_Q.py  test_aggregation.py  test_basic_queries.py  test_indexes.py  test_inner_queries.py  test_raw_queries.py
tests/queries/dynamic_collection/: test_Q.py  test_basic_queries.py  test_indexes.py  test_inner_queries.py  test_raw_queries.py  test_simple_aggregate.py
